[project]
name = "GarrTool_Scraper"
version = "0.1.0"
description = "Scrape and clean tool data"
requires-python = ">=3.8"
dependencies = [
    "dotenv>=0.9.9",
    "firecrawl>=4.12.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "requests>=2.32.4",
    "selenium>=4.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]
